--- a/src/conda_env.yml
+++ b/src/conda_env.yml
@@ -1,9 +1,9 @@
 name: ml4bio
 dependencies:
 - python=3.5
-- pandas=0.23
-- numpy=1.14
+- pandas
+- numpy
 - scikit-learn=0.19
-- matplotlib=2.2
-- pyqt=5.9
-- scipy=1.1
+- matplotlib
+- pyqt=5
+- scipy
