--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - bash miniconda.sh -b -p $HOME/anaconda
   - export PATH="$HOME/anaconda/bin:$PATH"
   - conda env create -f scripts/conda_env.yml
-  - conda activate ml4bio
+  - source activate ml4bio
 
 install:
   - pip install .
