Remove install scripts and update install instructions

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-4.5.11-Linux-x86_64.sh -O miniconda.sh
   - bash miniconda.sh -b -p $HOME/anaconda
   - export PATH="$HOME/anaconda/bin:$PATH"
-  - conda env create -f scripts/conda_env.yml
+  - conda env create -f conda_env.yml
   - source activate ml4bio
 
 install:
