--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,22 +3,20 @@ build: false
 
 environment:
   matrix:
-    - PYTHON_VERSION: 2.7
-      MINICONDA: C:\Miniconda
-    - PYTHON_VERSION: 3.4
-      MINICONDA: C:\Miniconda3
+    - PYTHON_VERSION: 3.5
+      MINICONDA: C:\Miniconda35-x64
 
 init:
   - "ECHO %PYTHON_VERSION% %MINICONDA%"
 
 install:
   - "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
+  - conda config --set always_yes yes
   - conda info -a
-  - "conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy nose"
-  - activate test-environment
-  - pip install coverage
+  - conda env create -f conda_env.yml
+  - activate ml4bio
+  - pip install .
 
 test_script:
-  - nosetests
+  # no test cases yet so only test the import
+  - python -c "import ml4bio; print(ml4bio.__version__)"
