--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,7 @@ init:
 install:
   - "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
   - conda config --set always_yes yes
+  - conda update conda
   - conda info -a
   - conda env create -f conda_env.yml
   - activate ml4bio
