Confirm test fails with invalid command

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,4 @@ jobs:
         shell: bash --login {0}
         if: runner.os == 'Linux'
         run: |
-          xvfb-run --auto-servernum ml4bio &
+          xvfb-run --auto-servernum ml4bio1 &
