--- a/conda_env.yml
+++ b/conda_env.yml
@@ -1,10 +1,10 @@
 name: ml4bio
 dependencies:
-- python=3.5
-- pandas
-- numpy
-- scikit-learn=0.19
-- matplotlib=2.1
-- pyqt=5
-- scipy
-- pip
+  - python=3.12
+  - pandas
+  - numpy
+  - scikit-learn
+  - matplotlib
+  - pyqt
+  - scipy
+  - pip
