--- a/conda_env.yml
+++ b/conda_env.yml
@@ -1,12 +1,13 @@
 name: ml4bio
 channels:
   - conda-forge
+  - defaults
 dependencies:
   - python=3.12
   - pandas
-  - numpy
-  - scikit-learn
-  - matplotlib
-  - pyqt
+  - numpy=2
+  - scikit-learn=1.6
+  - matplotlib=3.10
+  - pyqt=5
   - scipy
   - pip
